[package]
name = "sqlx-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }

fallible-iterator = "0.2.0"    # Fallible iterator traits
tokio-stream = "0.1.10"          # Utilities to work with `Stream` and `tokio`. 
